[package]
name = "mining-rewards-allowance"
version = "3.0.6"
authors = ["Luke Schoen"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'chrono/std',
    'log/std',
    # 'serde/std',
    'rand/std',
    'substrate-fixed/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
	'lite-json/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-bounties/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'pallet-collective/std',
    'pallet-membership/std',
    'pallet-randomness-collective-flip/std',
    'pallet-scheduler/std',
    'pallet-timestamp/std',
    'pallet-tips/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-io/std',
    'sp-keystore/std',
    'sp-runtime/std',
    'sp-std/std',
    'module-primitives/std',
]

[dependencies]
static_assertions = '1.1.0'
chrono = { version = '0.4.19', default_features = false }
lite-json = { version = "0.1", default-features = false }
log = { version = '0.4.14', default-features = false }
# serde = { version = '1.0.126', default-features = false, features = ['derive'] }
rand = { version = '0.8.4', default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", version = '0.5.6' }
codec = { version = '2.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
frame-support = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
frame-system = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-aura = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-balances = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-bounties = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-collective = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-democracy = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-elections-phragmen = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-timestamp = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default_features = false }
pallet-tips = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-membership = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-scheduler = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
pallet-treasury = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
sp-consensus-aura = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
sp-core = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
sp-io = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
sp-keystore = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false, optional = true }
sp-runtime = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
sp-std = { git = 'https://github.com/DataHighway-DHX/substrate', rev = 'f5dc02a8a491c149fba05a2a5a51c80ce1b3cead', default-features = false }
module-primitives = { version = '3.0.6', default-features = false, path = '../../primitives' }

[dev-dependencies]

