[package]
name = 'roaming-agreement-policies'
version = '0.1.0'
authors = ['Luke Schoen']
edition = '2018'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'safe-mix/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-networks/std',
    'roaming-accounting-policies/std',
    'roaming-operators/std'
]

[dependencies]
codec = { version = '1.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '2.0.0-rc4', default_features = false }
frame-system = { version = '2.0.0-rc4', default_features = false }
pallet-balances = { version = '2.0.0-rc4', default_features = false }
pallet-randomness-collective-flip = { version = '2.0.0-rc4', default_features = false }
pallet-transaction-payment = { version = '2.0.0-rc4', default_features = false }
sp-arithmetic = { version = '2.0.0-rc4', default_features = false }
sp-blockchain = { version = '2.0.0-rc4' }
sp-core = { version = '2.0.0-rc4', default_features = false }
sp-io = { version = '2.0.0-rc4', default_features = false }
sp-runtime = { version = '2.0.0-rc4', default_features = false }
sp-std = { version = '2.0.0-rc4', default_features = false }

# env = { default_features = false, package = 'env', path = '../../env' }
roaming-networks = { default_features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-accounting-policies = { default_features = false, package = 'roaming-accounting-policies', path = '../roaming-accounting-policies' }
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
