[package]
name = 'roaming-agreement-policies'
version = '1.0.0'
authors = ['Luke Schoen']
edition = '2018'

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'log/std',
    'safe-mix/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-networks/std',
    'roaming-accounting-policies/std',
    'roaming-operators/std',
    'serde',
]

[dependencies]
codec = { version = '2.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false }

# env = { default-features = false, package = 'env', path = '../../env' }
roaming-networks = { default-features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-accounting-policies = { default-features = false, package = 'roaming-accounting-policies', path = '../roaming-accounting-policies' }
roaming-operators = { default-features = false, package = 'roaming-operators', path = '../roaming-operators' }

serde = { version = '1.0.136', optional = true, features = ['derive'] }

[dev-dependencies]
