[package]
name = "roaming-charging-policies"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'log/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'serde',
    'safe-mix/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-operators/std',
    'roaming-networks/std'
]

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '3.0.0', default_features = false }
frame-system = { version = '3.0.0', default_features = false }
pallet-balances = { version = '3.0.0', default_features = false }
pallet-randomness-collective-flip = { version = '3.0.0', default_features = false }
pallet-transaction-payment = { version = '3.0.0', default_features = false }
sp-core = { version = '3.0.0', default_features = false }
sp-io = { version = '3.0.0', default_features = false }
sp-runtime = { version = '3.0.0', default_features = false }
sp-std = { version = '3.0.0', default_features = false }

log = { version = '0.4.8' }
serde = { version = '1.0.119', features = ['derive'], optional = true }

roaming-networks = { default_features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
