[package]
name = "roaming-network-profiles"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'safe-mix/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'serde',
    'roaming-operators/std',
    'roaming-networks/std',
    'roaming-network-servers/std',
    'roaming-organizations/std',
    'roaming-devices/std',
]

[dependencies]
codec = { version = '1.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '2.0.0-alpha.3', default_features = false }
frame-system = { version = '2.0.0-alpha.3', default_features = false }
pallet-balances = { version = '2.0.0-alpha.3', default_features = false }
pallet-randomness-collective-flip = { version = '2.0.0-alpha.3', default_features = false }
pallet-transaction-payment = { version = '2.0.0-alpha.3', default_features = false }
sp-core = { version = '2.0.0-alpha.3', default_features = false }
sp-io = { version = '2.0.0-alpha.3', default_features = false }
sp-runtime = { version = '2.0.0-alpha.3', default_features = false }
sp-std = { version = '2.0.0-alpha.3', default_features = false }

serde = { version = '1.0', optional = true }

roaming-devices = { default_features = false, package = 'roaming-devices', path = '../roaming-devices' }
roaming-organizations = { default_features = false, package = 'roaming-organizations', path = '../roaming-organizations' }
roaming-network-servers = { default_features = false, package = 'roaming-network-servers', path = '../roaming-network-servers' }
roaming-networks = { default_features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
