[package]
name = "roaming-network-profiles"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'log/std',
    'safe-mix/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-operators/std',
    'roaming-networks/std',
    'roaming-network-servers/std',
    'roaming-organizations/std',
    'roaming-devices/std',
    'serde',
]

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '46ea7e7f0b511429f5d44d104aee3e2560b11146', default-features = false }

serde = { version = '1.0.101', optional = true, features = ['derive'] }

roaming-devices = { default-features = false, package = 'roaming-devices', path = '../roaming-devices' }
roaming-organizations = { default-features = false, package = 'roaming-organizations', path = '../roaming-organizations' }
roaming-network-servers = { default-features = false, package = 'roaming-network-servers', path = '../roaming-network-servers' }
roaming-networks = { default-features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default-features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
